WIP: Create GUI: GUI now plays sounds when placing disks